src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__loop.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: loop\n──────────────────────────────────────────────────────────────────────────────────\nloop {\n    println(\"forever\");\n}"
expression: parse_expr (& source)
info: test_parser_block_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = Loop{
        Call {
            callee: Var(IdentId(1))[11:18],
            args: [
                "forever"[19:28],
            ],
        }[19:29],
    }[5:32],
)
