src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__multiple_unary.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: multiple_unary\n──────────────────────────────────────────────────────────────────────────────────\n!true + !true;"
expression: parse_expr (& source)
info: test_parser_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = BinaryNode {
        kind: Add,
        left: Unary(
            Not,
            true[1:5],
        )[1:5],
        right: Unary(
            Not,
            true[9:13],
        )[9:13],
    }[1:13],
)
