src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__nested_struct.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: nested_struct\n──────────────────────────────────────────────────────────────────────────────────\nstruct abc{struct dfg{};};"
expression: parse_expr (& source)
info: test_parser_structs
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "dfg",
            5: "abc",
        },
        file_id: FileId(Anon),
    } = Decl(global readonly)::IdentId(5) = {
        IdentId(4): {}[18:23],
    }[7:25][7:25],
)
