src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__parse_nested_paren.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: parse_nested_paren\n──────────────────────────────────────────────────────────────────────────────────\n((1+2)+(1+2));"
expression: parse_expr (& source)
info: test_parser_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = BinaryNode {
        kind: Add,
        left: BinaryNode {
            kind: Add,
            left: Int(1)[2:3],
            right: Int(2)[4:5],
        }[2:5],
        right: BinaryNode {
            kind: Add,
            left: Int(1)[8:9],
            right: Int(2)[10:11],
        }[8:11],
    }[2:11],
)
