src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__parse_paren.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: parse_paren\n──────────────────────────────────────────────────────────────────────────────────\n(1+2+b);"
expression: parse_expr (& source)
info: test_parser_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "b",
        },
        file_id: FileId(Anon),
    } = BinaryNode {
        kind: Add,
        left: BinaryNode {
            kind: Add,
            left: Int(1)[1:2],
            right: Int(2)[3:4],
        }[1:4],
        right: Var(IdentId(4))[5:6],
    }[1:6],
)
