src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__single_var_expr_decl.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: single_var_expr_decl\n──────────────────────────────────────────────────────────────────────────────────\nvar a;"
expression: parse_expr (& source)
info: test_parser_variables
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
        },
        file_id: FileId(Anon),
    } = Decl::IdentId(4) = Null[0:5][0:5],
)
