src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__struct_access.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"b.a*2\"))"
---
Ok(
    Ast {
        node: BinaryNode {
            kind: Multiply,
            left: FieldAccess {
                target: Var(IdentId(4))[0:1],
                requested: Property(
                    IdentId(5)[2:3],
                )[2:3],
            }[0:3],
            right: Int(2)[4:5],
        }[0:5],
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "b",
            5: "a",
        },
        file_id: FileId(Anon),
    },
)
