src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__struct_access_call.snap
---
source: src/frontend/ast/parser_test.rs
description: test_parsing
expression: "parse_expr (_test_func! (\"a.b().c\"))"
---
Ok(
    Ast {
        node: FieldAccess {
            target: FieldAccess {
                target: Var(IdentId(4))[0:1],
                requested: Method {
                    callee: IdentId(5),
                    callee_span: 2:3,
                    args: [],
                    arg_span: 4:5,
                }[2:5],
            }[0:5],
            requested: Property(
                IdentId(6)[6:7],
            )[6:7],
        }[0:7],
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "a",
            5: "b",
            6: "c",
        },
        file_id: FileId(Anon),
    },
)
