src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__struct_body.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: struct_body\n──────────────────────────────────────────────────────────────────────────────────\nstruct abc{};"
expression: parse_expr (& source)
info: test_parser_structs
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "abc",
        },
        file_id: FileId(Anon),
    } = Decl(readonly)::IdentId(4) = {}[7:12][7:12],
)
