src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__unary_operator.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: unary_operator\n──────────────────────────────────────────────────────────────────────────────────\n!true;"
expression: parse_expr (& source)
info: test_parser_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = Unary(
        Not,
        true[1:5],
    )[1:5],
)
